--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.2",
+    "nodemon": "^2.0.19",
     "@faker-js/faker": "^7.6.0",
     "compresion": "^1.7.11",
     "connect-mongo": "^4.6.0",
@@ -37,9 +41,5 @@
     "util": "^0.12.5",
     "win-node-env": "^0.6.1",
     "winston": "^3.8.2"
-  },
-  "devDependencies": {
-    "dotenv": "^16.0.2",
-    "nodemon": "^2.0.19"
   }
 }
